--- a/templates/post.html
+++ b/templates/post.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SKYPROGRAM post</title>
-  <link href="../static/css/styles.min.css" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/styles.min.css') }}" rel="stylesheet">
 </head>
 
 <body>
@@ -29,42 +29,36 @@
         <div class="item__top">
           <a href="/templates/user-feed.html" class="item__head">
             <div class="item__ava-wrap">
-              <img src="../static/img/ava1.png" alt="" class="item__ava" width="47">
+              <img src="{{ data_from_main.poster_avatar }}" alt="" class="item__ava" width="47">
             </div>
-            <span class="item__username">Username</span>
+            <span class="item__username">{{ data_from_main.poster_name }}</span>
           </a>
           <button type="button" class="item__bookmark-btn">
             <img src="../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
           </button>
         </div>
         <a href="" class="item__post-link">
-          <img src="../static/img/post1.jpg" alt="" width="348" class="item__post-img">
+          <img src={{ data_from_main.pic }} alt="" width="348" class="item__post-img">
         </a>
         <div class="item__descr">
           <p class="item__text">
-            Закрытые бутерброды пришли к&nbsp;нам из&nbsp;Англии. Вкусные и&nbsp;простые рецепты сэндвичей с&nbsp;фото позволят вам разнообразить завтраки и&nbsp;сделать перекусы более сытными! Они могут быть, как горячими, так и&nbsp;холодными.
+            {{ data_from_main.content }}
           </p>
-          <p class="item__text">
-            Итальянские закрытые сэндвичи называются панини. Для их&nbsp;приготовления берут чиабатту. В&nbsp;классическом рецепте используют традиционные итальянские продукты: помидоры, базилик, мацареллу.</p>
-        </div>
+          </div>
         <div class="item__bottom">
           <div class="item__post-info">
-            <p class="item__comments-counter">3 комментария</p>
+            <p class="item__comments-counter">{{ data|length }} комментария</p>
             <div class="item__counter">
               <img src="../static/img/eye.png" alt="" class="item__counter-icon" width="26">
-              <span class="item__counter-text">1023</span>
+              <span class="item__counter-text">{{ data_from_main.views_count }}</span>
             </div>
           </div>
           <div class="item__comments">
+            {% for item in data %}
             <p class="item__comment">
-              <b>user 1:</b> комментарий пользователя который его оставил
+              <b>{{ item.commenter_name }}:</b> {{ item.comment }}
             </p>
-            <p class="item__comment">
-              <b>user 2:</b> еще один комментарий
-            </p>
-            <p class="item__comment">
-              <b>user 3:</b> и&nbsp;какой-то коммент еще
-            </p>
+            {% endfor %}
           </div>
         </div>
       </div>
