--- a/templates/search.html
+++ b/templates/search.html
@@ -26,7 +26,7 @@
   <main class="container">
     <div class="search">
       <form action="/" class="search__form">
-        <input type="submit" class="search__input", onclick="window.location='/search/'">
+        <<input type="search" class="search__input", name="s">>
       </form>
       <p class="search__results">Найдено постов: {{data | length}}</p>
     </div>
